[package]
name = "bitcoin-scriptexec"
version = "0.0.0"
edition = "2021"
description = "Bitcoin Script interpreter/executor"
authors = ["Steven Roose <steven@roose.io>"]
license = "CC0-1.0"

[features]

[dependencies]
bitcoin = "0.32.5"
lazy_static = "1.4.0"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
bincode = { version = "1.3.3" }
serde_json = { version = "1.0.133" }
